# vapoursynth-removelogo

./: .gitignore  Makefile.am  configure.ac  meson.build  removelogo.c
src/: removelogo.c
